--- a/themes/hugoplate/layouts/index.html
+++ b/themes/hugoplate/layouts/index.html
@@ -6,7 +6,7 @@
         <div class="row justify-center">
           <div class="lg:col-7 md:col-9 mb-6 text-center">
             <div>
-              <img src="/images/logo.png" alt="Logo" class="h-48 mx-auto">
+              <img src="/images/logo.png" alt="Sudofish labs logo" class="h-48 mx-auto">
             </div>
             <h3 class="m-6 text-h3 lg:text-h3">
               {{ .title | markdownify }}
