--- a/themes/hugoplate/layouts/index.html
+++ b/themes/hugoplate/layouts/index.html
@@ -6,7 +6,10 @@
         <div class="row justify-center">
           <div class="lg:col-7 md:col-9 mb-6 text-center">
             <div>
-              <img src="/images/logo.png" alt="Sudofish labs logo" class="h-48 mx-auto">
+              <img
+                src="/images/logo.png"
+                alt="Sudofish labs logo"
+                class="h-48 mx-auto" />
             </div>
             <h3 class="m-6 text-h3 lg:text-h3">
               {{ .title | markdownify }}
@@ -25,6 +28,53 @@
                   {{ if strings.HasPrefix .link `http` }}
                     target="_blank" rel="noopener"
                   {{ end }}>
+                  {{ .label }}
+                  <i class="fa fa-arrow-right pl-2"></i>
+                </a>
+              {{ end }}
+            {{ end }}
+          </div>
+        </div>
+      </div>
+    </section>
+  {{ end }}
+
+  {{ range $i, $e:= .Params.features }}
+    <section class="section-sm {{ if (modBool $i 2) }}bg-gradient{{ end }}">
+      <div class="container">
+        <div class="row items-center justify-center">
+          <div
+            class="{{ if not (modBool $i 2) }}
+              md:order-1
+            {{ end }} md:col-7 lg:col-6">
+            <h2 class="mb-8">
+              {{ .title | markdownify }}
+            </h2>
+            <div>
+              <div
+                class="md:col-5 mb-2 {{ if not (modBool $i 2) }}
+                  md:order-2
+                {{ end }}">
+                <a href="/leveluphn" class="flex items-center text-center">
+                  {{ partial "logo" }}
+                  <div class="inline-block text-h3 hover:underline">LevelupHN</div>
+                </a>
+              </div>
+              <p class="mb-8 ml-2 text-lg">
+                {{ .content | markdownify }}
+              </p>
+            </div>
+            <ul>
+              {{ range .bulletpoints }}
+                <li class="relative mb-4 pl-6">
+                  <i class="fa fa-check absolute left-0 top-1.5"></i>
+                  {{ . | markdownify }}
+                </li>
+              {{ end }}
+            </ul>
+            {{ with .button }}
+              {{ if .enable }}
+                <a class="btn btn-primary mt-6" href="{{ .link | absURL }}">
                   {{ .label }}
                   <i class="fa fa-arrow-right pl-2"></i>
                 </a>
