update app name to 'Levelup for Hacker News'

--- a/themes/hugoplate/layouts/index.html
+++ b/themes/hugoplate/layouts/index.html
@@ -57,7 +57,7 @@
                 {{ end }}">
                 <a href="/leveluphn" class="flex items-center text-center">
                   {{ partial "logo" }}
-                  <div class="inline-block text-h5 hover:underline">LevelUp for Hackernews</div>
+                  <div class="inline-block text-h5 hover:underline">LevelUp for Hacker News</div>
                 </a>
               </div>
               <p class="mb-8 ml-2 text-lg">
