--- a/themes/hugoplate/layouts/index.html
+++ b/themes/hugoplate/layouts/index.html
@@ -7,7 +7,7 @@
           <div class="lg:col-7 md:col-9 mb-6 text-center">
             <div>
               <img
-                src="/images/logo.png"
+                src="/images/sudofish-logo.png"
                 alt="Sudofish labs logo"
                 class="h-48 mx-auto" />
             </div>
@@ -56,7 +56,10 @@
                   md:order-2
                 {{ end }}">
                 <a href="/leveluphn" class="flex items-center text-center">
-                  {{ partial "logo" }}
+                  <img
+                src="/images/logo.png"
+                alt="Sudofish labs logo"
+                class="w-12 h-12 mx-2" />
                   <div class="inline-block text-h5 hover:underline">LevelUp for Hacker News</div>
                 </a>
               </div>
