logo, alignment and title fixes

--- a/themes/hugoplate/layouts/index.html
+++ b/themes/hugoplate/layouts/index.html
@@ -4,14 +4,14 @@
     <section class="section pt-14">
       <div class="container">
         <div class="row justify-center">
-          <div class="lg:col-7 md:col-9 mb-6 text-center">
+          <div class="lg:col-7 md:col-9 mb-6">
             <div>
               <img
                 src="/images/sudofish-logo.png"
                 alt="Sudofish labs logo"
                 class="h-48 mx-auto" />
             </div>
-            <h3 class="m-6 text-h3 lg:text-h3">
+            <h3 class="m-6 text-h3 lg:text-h3 text-center">
               {{ .title | markdownify }}
             </h3>
             <h3 class="mb-4 text-h3 lg:text-h3">
@@ -57,8 +57,8 @@
                 {{ end }}">
                 <a href="/leveluphn" class="flex items-center text-center">
                   <img
-                src="/images/logo.png"
-                alt="Sudofish labs logo"
+                src="/images/levelup-logo.png"
+                alt="LevelUp for Hacker News logo"
                 class="w-12 h-12 mx-2" />
                   <div class="inline-block text-h5 hover:underline">LevelUp for Hacker News</div>
                 </a>
