--- a/themes/hugoplate/layouts/index.html
+++ b/themes/hugoplate/layouts/index.html
@@ -57,7 +57,7 @@
                 {{ end }}">
                 <a href="/leveluphn" class="flex items-center text-center">
                   <img
-                src="/images/levelup-logo.png"
+                src="/images/logo.png"
                 alt="LevelUp for Hacker News logo"
                 class="w-12 h-12 mx-2" />
                   <div class="inline-block text-h5 hover:underline">LevelUp for Hacker News</div>
